--- a/practice.css
+++ b/practice.css
@@ -1,4 +1,4 @@
-/*  h1{
+  h1{
     color: blue;
     border-style: dotted;
     border-left: 1px solid black ;
@@ -12,7 +12,7 @@
     width:100px;
     height: 50px;
     text-align: center; 
-} */
+}
 #circle{
     width: 150px;
     height: 150px;
@@ -23,7 +23,7 @@
 
 }
 
-/* .Okk{
+ .Okk{
     color:aqua;
     background-color: brown;
     display: flex;
@@ -33,4 +33,4 @@
     gap: 20px;
     justify-content: space-evenly;
     align-items: center;
-} */
+} 
