--- a/homework2.css
+++ b/homework2.css
@@ -29,18 +29,21 @@ body{
 .child1{
     width: 100%;
     height: 35%;
-    border: 1px solid red;
+    border-radius: 50px;
+    /* border: 1px solid red; */
     
 }
 .child2{
     width: 100%;
     height: 45%;
-    border: 1px solid blue;
+    /* border: 1px solid blue; */
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     background-color: white;
+    gap: 0px;
+    
 }
 .child3{
     width: 100%;
