--- a/homework2.css
+++ b/homework2.css
@@ -36,7 +36,7 @@ body{
 .child2{
     width: 100%;
     height: 45%;
-    /* border: 1px solid blue; */
+    border: 1px solid blue;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -55,4 +55,5 @@ body{
     align-items: center;
     border-radius: 11px;
     justify-content: space-evenly;
+    gap: 0px;
 }
