--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
   background: #111;
   color: #ddd;
   font-size: 14px;
-  padding: 8px 24px;
+  padding: 12px 24px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -23,7 +23,7 @@ body {
   text-decoration: underline;
 }
 .social a {
-  margin-left: 12px;
+  margin-left: 10px;
   color: #2bbbad;
   font-size: 16px;
 }
@@ -36,17 +36,27 @@ body {
   background: #fff;
   border-bottom: 1px solid #eee;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  justify-content: center;
+  align-items:center;
   padding: 30px 24px;
+  position:relative;
 }
 .logo {
+    position: absolute;
+    left: 24px;
   font-weight: bold;
   font-size: 20px;
   color: #333;
 }
+.nav-links{
+    margin-left: 10%;
+    width: 80%;
+    display: flex;
+    justify-content: flex-end;
+  gap: 20px; 
+}
 .nav-links a {
-  margin-left: 20px;
+  margin-right: 20px;
   color: #444;
   text-decoration: none;
   font-size: 15px;
@@ -61,3 +71,55 @@ body {
   text-align: center;
 }
 
+
+.services {
+  display: flex;
+  justify-content: space-around;
+  padding: 60px 10%;
+  text-align: left;
+  background: #fff;
+}
+
+.service-box {
+  flex: 1;
+  margin: 0 20px;
+  padding: 20px;
+}
+
+.service-title {
+  font-size: 26px;
+  margin-bottom: 15px;
+  font-weight: bold;
+}
+.service-title ul li::before{
+  content: "&#10004";
+  color: #2bbbad;
+}
+
+.innovate{
+  color: #2bbbad;
+}
+.create{
+  color: #2bbbad;
+}
+.scale{
+  color: #2bbbad;
+}
+
+/* Text */
+.service-box p {
+  font-size: 15px;
+  line-height: 1.6;
+  margin-bottom: 15px;
+}
+
+/* List Styling */
+.service-box ul {
+  list-style: none;
+  padding: 0;
+}
+
+.service-box ul li {
+  margin-bottom: 10px;
+  font-size: 14px;
+}
